# the-agency-starter

./: .agency-starter  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXTENDING.md  GETTING_STARTED.md  LICENSE  PHILOSOPHY.md  README.md  VERSION  WORKSHOP.md  agency  install.sh  package.json  pnpm-workspace.yaml  registry.json
.claude/: settings.json  settings.local.json.example
.claude/commands/: agency-bug.md  agency-help.md  agency-nit.md  agency-request.md  agency-tutorial.md  agency-welcome.md  agency.md  tutorial.md  welcome.md
.claude/hooks/: check-messages.sh  messages-check.sh  session-end.sh  session-start.sh  statusline.sh  stop-check.py
.github/workflows/: quality.yml  (+2 more)
claude/: config.yaml
history/: CHANGELOG.md
source/apps/agency-bench/src-tauri/: Cargo.toml  tauri.conf.json
source/apps/agency-bench/src-tauri/capabilities/: default.json
source/apps/agency-bench/src-tauri/icons/: icon.icns
source/apps/agency-bench/src-tauri/src/: main.rs
tools/: _log-helper  add-nit  add-principal  add-tool-version  adhoc-log  agency  agency-bench  agency-feedback  agency-service  agency-update  agent-create  agentname  archive-session  artifact-capture  artifact-index-update  artifact-list  backup-session  bench  bench-build  browser  bug-report  build-bench  bump-version  capture-artifact  capture-instruction  capture-proposal  code-review  collaborate  collaboration-respond  commit  commit-precheck  commit-prefix  compare-starter  complete-instruction  complete-request  config  context-review  context-save  create-agent  create-epic  (+111 more)
(+440 files in other folders)
