[package]
name = "agency-bench"
version = "0.1.0"
description = "AgencyBench - Developer workbench for The Agency"
authors = ["The Agency"]
license = "MIT"
repository = "https://github.com/the-agency-ai/the-agency"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
